clusters/beryjuorg-prd/prod-beryju-org/docker-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: docker
  name: docker
  namespace: prod-beryju-org
spec:
  externalName: harbor-harbor-core.prod-harbor.svc.cluster.local
  sessionAffinity: None
  type: ExternalName
