clusters/beryjuorg-prd/prod-beryju-org/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beryju-org
  namespace: prod-beryju-org
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: beryju.org
  sessionAffinity: None
  type: ClusterIP
