clusters/beryjuorg-prd/prod-beryju-org/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
  name: beryju-org
  namespace: prod-beryju-org
spec:
  rules:
  - host: beryju.org
    http:
      paths:
      - backend:
          service:
            name: beryju-org-grav
            port:
              number: 80
        path: /
      - backend:
          service:
            name: docker
            port:
              number: 80
        path: /v2
  - host: blog.beryju.org
    http:
      paths:
      - backend:
          service:
            name: beryju-org-grav
            port:
              number: 80
        path: /
  tls:
  - hosts:
    - beryju.org
    - blog.beryju.org
    secretName: beryju-org
